# EPIC-BBox-Cell-Tracking

./: .coverage  .env  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yaml  python-package.yaml  python-package.yml
docs/: epic.analysis.analyse.analyse.md  epic.conversion.convert.convert.md  epic.detection.detect.detect.md  epic.tracking.track.track.md  overview.md
epic/: __init__.py  __main__.py  cli.py
epic/analysis/: analyse.py  cell_migration_analysis.py  cell_migration_metrics.py
epic/conversion/: convert.py
epic/detection/: base_detector.py  base_mask_generator.py  bounding_box.py  deep_extreme_cut.py  detect.py  detectors_factory.py  generated_mask.py  luminoth_detector.py  mmdetection.py  mmdetection_swin_transformer.py  point.py
epic/features/: appearance_features.py  base_feature.py  feature_factory.py  motion_features.py
epic/logging/: logging.py
epic/preprocessing/: dataset_conversion.py  preprocess.py
epic/tracking/: __init__.py  base_tracker.py  epic_tracker.py  track.py  tracker.py  tracker_factory.py  tracklet.py
epic/utils/: bounding_box.py  cell_migration.py  detection_factory.py  file_processing.py  image_processing.py  misc.py  point.py  tracklet.py
misc/configs/: airway_epithelial_cell_wound_repair_config.yaml  airway_epithelial_cell_wound_repair_lite_config.yaml  ali_wound_repair_config.yaml  base_config.yaml  cell_area_config.yaml  cell_division_config.yaml  config.yaml  (+8 more)
tests/: __init__.py  test_commands.py
(+485 files in other folders)
